--- a/where.html
+++ b/where.html
@@ -24,128 +24,39 @@
     <input type="checkbox" class="toggler">
     <div class="hamburger">
         <div></div>
-    </div>
-    <div class="menu">
-        <div>
-            <div>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="statistics.html" >Statistics</a></li>
-                    <li>
-                      <div class="dropdown">
-                        <button class="dropbtn"><a href="where.html" style="color: white; border-bottom-width: 5px; border-bottom-style: solid; padding: 7px;" id="a">WHERE</a></button>
-                        <div class="dropdown-content">
-                          <a href="dive-north.html">Deep Dive - North Philly</a>
-                          <a href="dive-south.html">Deep Dive - South Philly</a>
-                          <a href="dive-west.html">Deep Dive - West Philly</a>
-                        </div>
-                      </div>                    
-                    </li>
-                    <li><a href="prevention.html">Prevention</a></li>
-                    <li><a href="about-the-author.html">My Mission</a></li>
-                </ul>
-            </div>
+</div>
+<div class="menu">
+  <div>
+      <div>
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="statistics.html" >Statistics</a></li>
+              <li><a href="where.html"style=" border-bottom-width: 5px; border-bottom-style: solid;">Where</a></li>
+              <li><a href="prevention.html">Prevention</a></li>
+              <li><a href="about-the-author.html">My Mission</a></li>
+          </ul>
         </div>
     </div>
+  </div>
 </div>
 <!--Navbar End-->
-<!--Splash Starts-->
-<section class="section one">
-    <div class="container1">
-      <div class="column-left">
-        <p class="text"> First, we need to get a general look at Philly.</p>
-        <p class="text">↓</p>
-      </div>
-    </div>
-  </section>
-  <section class="section one">
-    <div class="container1">
-      <div class="column-left">
-        <p class="text">
-            Next, we can split Philly into sections.
-        </p>
-        <p class="text">↓</p>
-      </div>
-    </div>
-  </section>
-  <section class="section one">
-    <div class="container1">
-      <div class="column-left">
-        <p class="text">Then, we can dive deeper</p>
-        <p class="text">↓</p>
-      </div>
-    </div>
-  </section>
-  <section class="section one">
-    <div class="container1">
-      <div class="column-left">
-        <p class="text">Get more data about each section</p>
-        <p class="text">↓</p>
-      </div>
-    </div>
-  </section>
-  <section class="section one">
-    <div class="container1">
-      <div class="column-left">
-        <p class="text">And get the real perspectives of "dangerous" or "safe"</p>
-        <p class="text">↓</p>
-      </div>
-    </div>
-  </section>
-  <section class="section one"></section>
-<!--Splash Ends-->
+
+<!--Intro Starts-->
+<div class="container">
+  <h1>Learn Where</h1>
+  <p>Now that we know the general numbers of gun violence in Philly, we are going to dive deeper. We will learn in depth statistics, meaning
+    statistics of certain areas, and neighborhoods. 
+  </p>
+</div>
+
+<div class="info"></div>
 
 
-<!--Home Page Start-->
-<h1 id="note">General Perspective: </h1>
-<div id="gp-map"></div>
-<h2 id="hover-over">Hover over each card to learn more about each area</h2>
- <div class="container">
-     <div class="card">
-        <div class="content">
-             <h2 id="north">North</h2>
-            <h3>North Philly</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
-            a beatae aperiam soluta cumque, reiciendis quae 
-            at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="content">
-                <h2 id="west">West</h2>
-                <h3>West Philly</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
-                a beatae aperiam soluta cumque, reiciendis quae 
-                at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="content">
-                <h2 id="south">South</h2>
-                <h3>South Philly</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
-                a beatae aperiam soluta cumque, reiciendis quae 
-                at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
-            </div>
-        </div>  
-    </div>
-<!--Home Page End-->
-
-<!--Transitions To Next-->
-<section class="gonorth">
-    <div class="gonorth-content">
-        <h3>Now that we have a general view of the city of Philadelphia, we need to dive deeper into the 3 main parts of Philly:
-            North, South, and West. To start, we will go to North Philly, and learn where the most dangerous areas are, and where 
-            the least dangerous areas are. 
-        </h3>
-        <a href="dive-north.html" class="btn">Lets Learn!</a>
-    </div>
-</section>
+<!--Intro Ends-->
 
 
 <script src="JS/where.js"></script>
-<script src="JS/scroll-trigger.js"></script>
+
 
 </body>
 </html>
