--- a/where.html
+++ b/where.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Leaflet Imports-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
     crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/TextPlugin.min.js"></script>
+
+    <!--Font-Awesome Imports-->
+    <script src="https://kit.fontawesome.com/4d72ef9868.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="CSS/where.css">
     <link rel="icon" href="images/Website-logo.png">
@@ -44,9 +46,12 @@
 <!--Intro Starts-->
 <div class="container">
   <h1>Learn Where</h1>
-  <p>Now that we know the general numbers of gun violence in Philly, we are going to dive deeper. We will learn in depth statistics, meaning
-    statistics of certain areas, and neighborhoods. 
+  <p>You know how much gun violence happens. You have the general statistics. But to get detailed statistics
+    we need to dive deeper into philaldephia. Instead of looking at how much gun violence happens in Philadelphia
+    as a whole, we need to know how much it happens in certain areas of Philly. By doing this, we will get a detailed 
+    view of Gun Violence in Philly.
   </p>
+  <div class="animate"><i class="fa-solid fa-angle-down"></i></div>
 </div>
 
 <div class="info"></div>
