created scroll trigger

--- a/where.html
+++ b/where.html
@@ -22,6 +22,7 @@
 </head>
 <body>
 <!--Navbar Start-->
+
 <div class="menu-wrap">
     <input type="checkbox" class="toggler">
     <div class="hamburger">
@@ -44,6 +45,7 @@
 <!--Navbar End-->
 
 <!--Intro Starts-->
+
 <div class="container">
   <h1>Learn Where</h1>
   <p>You know how much gun violence happens. You have the general statistics. But to get detailed statistics
@@ -54,14 +56,35 @@
   <div class="animate"><i class="fa-solid fa-angle-down"></i></div>
 </div>
 
-<div class="info"></div>
-
-
 <!--Intro Ends-->
 
+<!--Info Starts-->
+<div class="wrapper">
+  <section class="section section1" style="background-image: url(images/statistics-background1.jpeg);">
+    <h2>Section One</h2>
+  </section>
 
+  <section class="section section2" style="background-image: url(images/statistics-background2.jpeg);">
+    <h2>Section Two</h2>
+  </section>
+
+  <section class="section section3" style="background-image: url(images/statistics-background3.jpeg);">
+    <h2>Section Three</h2>
+  </section>
+
+  <section class="section section4" style="background-image: url(images/statistics-background4.jpeg);">
+    <h2>Section Four</h2>
+  </section>
+</div>
+
+
+
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 <script src="JS/where.js"></script>
-
 
 </body>
 </html>
