created scroll trigger

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="index.html" style=" border-bottom-width: 5px; border-bottom-style: solid;">Home</a></li>
                     <li><a href="statistics.html" >Statistics</a></li>
-                    <li><a href="wheree.html" >Where</a></li>
+                    <li><a href="where.html">Where</a></li>
                     <li><a href="prevention.html">Prevention</a></li>
                     <li><a href="about-the-author.html">My Mission</a></li>
                 </ul>
