created scroll trigger

--- a/where.html
+++ b/where.html
@@ -58,6 +58,8 @@
 
 <!--Intro Ends-->
 
+<div class="blank"></div>
+
 <!--Info Starts-->
 <div class="wrapper">
   <section class="section section1" style="background-image: url(images/statistics-background1.jpeg);">
