--- a/where.html
+++ b/where.html
@@ -58,16 +58,25 @@
 
 <!--Intro Ends-->
 
-<div class="blank"></div>
+
 
 <!--Info Starts-->
 <div class="wrapper">
-  <section class="section section1" style="background-image: url(images/statistics-background1.jpeg);">
-    <h2>Section One</h2>
+  <section class="section section1" style="background-image: url(images/temple-pic.jpeg); filter: grayscale(1);">
+    <h2>Welcome to North Philly</h2>
   </section>
 
   <section class="section section2" style="background-image: url(images/statistics-background2.jpeg);">
-    <h2>Section Two</h2>
+    <div class="video-wrapper">
+      <video playsinline autoplay muted loop src="Videos/pexels-kelly-lacy-6581006 (2160p).mp4" type="video/mp4"></video>
+        <div class="header">
+          <h6 class="indicator">#1</h6>
+          <h1>Danger Zone</h1>
+          <p>North Philly is one of the most intoxicated areas of Philadelphia. Drug Dealing, thefts, burglaries, and firearm assaults are very 
+          common there. In the past year, there have been X shootings in the area, and y people have been killed (as of x/y/z).
+          </p>
+        </div>
+    </div>
   </section>
 
   <section class="section section3" style="background-image: url(images/statistics-background3.jpeg);">
